# perm_group

./: .buildinfo  .drone.jsonnet  .drone.yml  .gitignore  CMakeLists.txt  ChangeLog.rst  PermGroupConfig.cmake  README.rst  bootstrap.sh  changes.html  config.hpp.in  configure.ac  genindex.html  index.html  installation.html  jla_build.sh  objects.inv  search.html  searchindex.js  testJLA.sh
NB_perm_group/: build.sh  clean.sh  preBuild.sh
NB_perm_group/nbproject/: configurations.xml  project.xml
_sources/: index.rst.txt  installation.rst.txt
_sources/reference/: io.rst.txt  orbit.rst.txt
_sources/reference/allocator/: allocator.rst.txt  default.rst.txt  index.rst.txt  pooled.rst.txt  raw_ptr.rst.txt
_sources/reference/group/: basic_stabilizer.rst.txt  generated.rst.txt  group.rst.txt  index.rst.txt  io.rst.txt  schreier_stabilizer.rst.txt  stabilizer_chain.rst.txt
_sources/reference/permutation/: array.rst.txt  index.rst.txt  interface.rst.txt  io.rst.txt  permutation.rst.txt  traits.rst.txt  word.rst.txt
_sources/reference/transversal/: explicit.rst.txt  index.rst.txt  transversal.rst.txt
_sources/reference/util/: index.rst.txt  iterators.rst.txt
cmake/: Coverage.cmake  CoverageBuild.sh
doc/: CMakeLists.txt  makeDocs.sh
doc/source/: conf.py  installation.rst
doc/source/extensions/cpp_concepts/: __init__.py
docs/v0.3/: changes.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js
docs/v0.3/_sources/: index.rst.txt
docs/v0.3/_sources/reference/: orbit.rst.txt
docs/v0.3/_sources/reference/group/: basic_stabilizer.rst.txt  generating_system.rst.txt
docs/v0.3/_sources/reference/permutation/: index.rst.txt  io.rst.txt  mult.rst.txt
docs/v0.3/reference/: index.html  io.html  orbit.html
docs/v0.3/reference/allocator/: allocator.html  index.html
docs/v0.3/reference/group/: generated.html  generating_system.html  group.html  index.html  io.html  schreier_stabilizer.html
docs/v0.3/reference/permutation/: array.html  built_in.html  index.html  interface.html  io.html  mult.html  traits.html
docs/v0.3/reference/util/: iterators.html
docs/v0.4/: changes.html  index.html  installation.html  objects.inv
docs/v0.4/_sources/reference/: index.rst.txt
docs/v0.4/_sources/reference/allocator/: shared_ptr.rst.txt
docs/v0.4/_sources/reference/group/: group.rst.txt
docs/v0.4/_sources/reference/permutation/: built_in.rst.txt  permutation.rst.txt
docs/v0.4/reference/: io.html
docs/v0.4/reference/allocator/: index.html  pooled.html  raw_ptr.html
docs/v0.4/reference/group/: basic_stabilizer.html  generating_system.html  index.html  schreier_stabilizer.html  stabilizer_chain.html
docs/v0.4/reference/permutation/: array.html  built_in.html  index.html  interface.html  io.html  permutation.html  word.html
docs/v0.4/reference/transversal/: index.html
docs/v0.4/reference/util/: index.html  iterators.html
include/perm_group/: io.hpp  orbit.hpp
include/perm_group/allocator/: allocator.hpp  default.hpp  pooled.hpp  raw_ptr.hpp  shared_ptr.hpp
include/perm_group/group/: basic_stabilizer.hpp  generated.hpp  generating_system.hpp  group.hpp  io.hpp  schreier_stabilizer.hpp  stabilizer_chain.hpp
include/perm_group/permutation/: array.hpp  built_in.hpp  interface.hpp  io.hpp  mult.hpp  permutation.hpp  traits.hpp  word.hpp
include/perm_group/transversal/: explicit.hpp  transversal.hpp
include/perm_group/util/: iterators.hpp
lib/pkgconfig/: perm-group.pc.in
reference/: index.html  io.html  orbit.html
reference/allocator/: allocator.html  default.html  index.html  pooled.html  raw_ptr.html  shared_ptr.html
reference/group/: basic_stabilizer.html  generated.html  generating_system.html  group.html  index.html  io.html  schreier_stabilizer.html  stabilizer_chain.html
reference/permutation/: array.html  built_in.html  index.html  interface.html  io.html  mult.html  permutation.html  traits.html  word.html
reference/transversal/: explicit.html  index.html  transversal.html
reference/util/: index.html  iterators.html
src/permutation/: io.cpp
test/: CMakeLists.txt  group_basic_stabilizer.cpp  group_basic_updatable_stabilizer.cpp  group_generated.cpp  group_schreier_stabilizer.cpp  group_schreier_updatable_stabilizer.cpp  group_stabilizer_chain.cpp  mult.cpp  orbit.cpp  permutations.cpp  sage.hpp  stabilizer_util.hpp  subgroup_util.hpp  transversal_explicit.cpp  util.hpp
test/cmake_add_subdirectory/: CMakeLists.txt
test/cmake_add_subdirectory/project/: CMakeLists.txt
test/cmake_import/project/: CMakeLists.txt  main.cpp
